fix overflow issue with chips, add dark theme toggle

--- a/src/app/global-transfer-info/global-transfer-info.component.scss
+++ b/src/app/global-transfer-info/global-transfer-info.component.scss
@@ -78,6 +78,13 @@ h4 {
 mat-chip {
   border-radius: 10px;
   width: 100%;
+
+  white-space: nowrap;
+
+  h4 {
+    overflow: hidden;
+    text-overflow: ellipsis;
+  }
 }
 
 #summaryContent {
